--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name":"npmish",
-  "description":"a proxy npm repository server that serves local tars and packs local repos when they are requested.",
-  "version":"0.0.2",
+  "name": "npmish",
+  "description": "a proxy npm repository server that serves local tars and packs local repos when they are requested.",
+  "version": "0.0.4",
   "author": "Ryan Day <soldair@gmail.com>",
   "homepage": "http://github.com/soldair/node-npmish",
-  "dependencies":{
-    "walkdir":"0.0.x",
-    "semver":"1.0.x",
-    "tar":"~0.1.13",
-    "bouncy":"~1.3.1",
-    "tako":"0.3.x",
-    "request":"~2.9.202"
+  "dependencies": {
+    "walkdir": "0.0.x",
+    "semver": "1.0.x",
+    "tar": "~0.1.13",
+    "bouncy": "~1.3.1",
+    "tako": "0.3.x",
+    "request": "~2.9.202",
+    "ini": "~1.1.0"
   },
-  "scripts":{
-    "test":"./node_modules/tap/bin/tap.js ./test/"
+  "scripts": {
+    "test": "./node_modules/tap/bin/tap.js ./test/"
   },
-  "devDependencies":{
-    "tap":"*"
+  "devDependencies": {
+    "tap": "*"
   },
-  "main":"npmish.js",
-  "repository":{
-        "type":"git",
-        "url":"git://github.com/soldair/node-npmish.git"
+  "main": "npmish.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/soldair/node-npmish.git"
   },
-  "engines":{
-    "node":">=0.6.0"
+  "engines": {
+    "node": ">=0.6.0"
   }
 }
